# pythonFiles

./: .gitignore  DSA_notes.txt  FileHandeling.html  LICENSE.md  README.md  docx_content.txt  practice11.py  practice12.py  practice9.py  questions.txt  requirements.txt  string27  stringchallange2.py
Adams-call/: .renderignore  README.md  RENDER_DEPLOY.md  render.yaml  requirements.txt
AdobeHackathonDSAround/: AliceAndBob.txt  AliceandBob.py  LilaAndTheo.txt  LisaAndTheo.py  MagicCell.py  MagicCell.txt
AutoBuilder/: Palnner.md  auto_create_everything.json  auto_create_everything_http.json
Capgemini/: asked_question.txt  capg3.py  capg4.py  capg6.py  capg7.py  capg8.py  technical_interveiw_question.txt  test.py
Compiler_Design/: Assignment_1.md  Assignment_4.md  Assignment_5.md
DataStructures-And-Algorithim/: List.md  functionLIst.md
Data_Vizuals/: vegetation_Graph.ipynb
DeepResearch/: Agent_problems.md
GenC-prep/: DigitStrings.java  Question1.java  Question10.java  Question11.java  Question12.java  Question13.java  Question2.java  Question3.java  Question4.java  Question5.java  Question6.java  Question7.java  Question8.java  Question9.java  StrongerKnights.java  javaArray.java  move_hash.java  questions.txt  recursion.txt
HackerRank/: two_stacks.py  valied_string.py
NpN-prep/: DataScienceWithPython.ipynb  DataScienceWithPython2.ipynb  main.py  mySQL_quaries.py  mySQLlogics.py  pythonCourse.ipynb  pythonCourseAdvanced.ipynb  pythonCourseBeginner.ipynb  quary.sql  session1.txt  (+3 more)
ocr_pdf_extractor/: README.md  main.ipynb  main.py  pyproject.toml  test.py
(+159 files in other folders)
