[project]
name = "ocr-pdf-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "paddleocr>=3.3.2",
    "paddlepaddle>=3.2.2",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "tqdm>=4.67.1",
]
